--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
+/* Your CSS Code here. */
+.holder{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 15px;
+    row-gap: 15px;
+  }
 
 /* Your CSS Code here. */
+  .box{
+    min-width: 150px;
+    border: 2px solid black;
+  }
