--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
 /* Your CSS Code here. */
 .holder{
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    column-gap: 15px;
-    row-gap: 15px;
-  }
+	display:flex;
+	justify-content:center;
+	flex-wrap:wrap;
+	
+}
 
-/* Your CSS Code here. */
-  .box{
-    min-width: 150px;
-    border: 2px solid black;
-  }
+.item{
+	width:50px;
+	height:50px;
+	background-color:black;
+	margin:10px;
+	color:white;
+}
